# 3123B_CrismaruSorin_MotorCautare

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  stopwords.txt  test.txt
.github/workflows/: tests.yml
docs/: Documentatie.md
src/: Document.cpp  Document.h  Index.cpp  Index.h  Logger.cpp  Logger.h  Observable.h  Observer.h  SearchResults.cpp  SearchResults.h  main.cpp  main_gui.cpp
tests/: test_index.cpp
